--- a/모각코 플러스 HTML CSS 심화/minihome/static/style.css
+++ b/모각코 플러스 HTML CSS 심화/minihome/static/style.css
@@ -1,3 +1,10 @@
+@font-face {
+    font-family: 'Pretendard-Regular';
+    src: url('https://cdn.jsdelivr.net/gh/Project-Noonnu/noonfonts_2107@1.1/Pretendard-Regular.woff') format('woff');
+    font-weight: 400;
+    font-style: normal;
+}
+
 body {
     background-image: url(./images/pattern.png);
     background-color: darkgray;
@@ -63,11 +70,32 @@ body {
     display:inline-block;
     margin-top: 10px;
 }
+.today > span {
+    color:red;
+}
 
 .row2 {
     flex: 1;
     background-color: white;
     border-radius: 10px;
+    flex-direction: column;
+    display:flex;
+}
+
+.row2_img {
+    flex-basis: 30%;
+    margin: 40px 30px 30px 30px;
+}
+
+.row2_img > img {
+    width: 100%;
+    height: 100%;
+}
+
+.row2_intro {
+    flex: 1;
+    margin: 0px 30px 30px 30px;
+    font-size: 0.7em;
 }
 
 .column2 {
@@ -89,6 +117,137 @@ body {
     flex: 1;
     background-color: white;
     border-radius: 10px;
+    display: flex;
+    flex-direction: column;
+}
+
+.main_news {
+    flex: 0.45;
+    margin: 20px 10px 10px 10px;
+    display: flex;
+    flex-direction: column;
+}
+
+.news_title {
+    flex: 0.2;
+    font-weight: 700;
+}
+
+.news_main {
+    flex: 1;
+    display: flex;
+    border-top : 3px solid darkblue;
+}
+
+.news_left {
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    font-family: 'Pretendard-Regular'
+}
+
+.left_row1 {
+    flex:0.2;
+    margin: 2px;
+    display:flex;
+}
+
+.left_row1_icon {
+    flex: 0.2;
+    background-color:cornflowerblue;
+    color:white;
+    font-size: 0.9em;
+    text-align: center;
+}
+
+.left_row1_main {
+    flex: 1;
+    margin-left: 5px;
+}
+
+.left_row2 {
+    flex:0.2;
+    margin: 2px;
+    display:flex;
+}
+
+.left_row2_icon {
+    flex: 0.2;
+    background-color:darkolivegreen;
+    color:white;
+    font-size: 0.9em;
+    text-align: center;
+}
+
+.left_row2_main {
+    flex: 1;
+    margin-left: 5px;
+}
+
+.news_right {
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    margin-left: 20px;
+    font-family: 'Pretendard-Regular';
+}
+
+.right_row1 {
+    flex:0.2;
+    border-bottom: 1px dashed darkblue;
+    margin: 2px;
+    display: flex;
+    flex-direction: row;
+    font-size: 0.9em;
+    align-items: flex-end;
+}
+
+.row1_diary {
+    flex: 1;
+}
+
+.row1_picture {
+    flex: 1;
+}
+
+.right_row2 {
+    flex:0.2;
+    border-bottom: 1px dashed darkblue;
+    margin: 2px;
+    display: flex;
+    flex-direction: row;
+    font-size: 0.9em;
+    align-items: flex-end;
+}
+
+.row2_board {
+    flex: 1;
+}
+
+.row2_visitor {
+    flex: 1;
+}
+
+.day {
+    color:blue;
+    font-size: 0.8em;
+}
+
+.main_room {
+    flex: 1;
+    margin: 10px;
+    display:flex;
+    flex-direction: column;
+}
+
+.room_title {
+    flex: 0.07;
+    font-weight: 700;
+}
+
+.room_main {
+    flex: 1;
+    border-top: 3px solid darkblue;
 }
 
 .column_etc1 {
@@ -109,8 +268,4 @@ body {
     display: flex;
     border: 2px solid gray;
     border-radius: 3px;
-}
-
-span {
-    color:red;
 }
