--- a/모각코 플러스 HTML CSS 심화/minihome/static/home.css
+++ b/모각코 플러스 HTML CSS 심화/minihome/static/home.css
@@ -143,11 +143,16 @@
 .room_title {
     flex: 0.07;
     font-weight: 700;
+    border-bottom: 3px solid darkblue;
 }
 
 .room_main {
     flex: 1;
-    border-top: 3px solid darkblue;
+}
+
+.room_main > img {
+    width: 100%;
+    height: 100%;
 }
 
 .column_etc1 {
